--- a/curriculum.html
+++ b/curriculum.html
@@ -33,46 +33,67 @@
           <h2>INFO PERSONALI</h2>
           <br />
           <figure>
+            <br />
             <img src="assets/img/profilo.jpg" alt="Foto profilo" class="imageborder" width="400" />
             <figcaption>La mia postazione di lavoro!</figcaption>
           </figure>
+          <br />
           <address>
             <img src="assets/img/calendar.svg" alt="" width="20" height="20" /> <b>Data di nascita:</b> 22-10-1993<br />
             <img src="assets/img/smartphone.svg" alt="" width="20" height="20" /> <b>Telefono:</b> <a href="tel:0610203040" title="chiamami per un colloquio">06-10203040</a><br />
             <img src="assets/img/whatsapp.svg" alt="" width="20" height="20" /> <b>Whatsapp:</b> <a href="https://wa.me/0610203040" title="mandami un messaggio">06-10203040</a>
           </address>
-          <p><b>Su di me:</b></p>
-          <blockquote>
-            <p>"Sembra sempre impossibile, finché non viene fatto." <cite>(Nelson Mandela)</cite></p>
-          </blockquote>
+          <br />
+          <br />
+          <p class="paragrafo-about"><b>Su di me:</b></p>
+          <div>
+            <br />
+            <br />
+            <blockquote>
+              <p class="paragrafo-cit">
+                "Sembra sempre impossibile, finché <br />
+                non viene fatto." <cite>(Nelson Mandela)</cite>
+              </p>
+            </blockquote>
+          </div>
         </div>
 
         <div>
+          <br />
+          <br />
           <h2>PRESENTAZIONE</h2>
-          <p>
+          <br />
+          <p class="paragrafo-presentazione">
             Lavoro come <strong>sviluppatore Front End</strong> in qualità di libero professionista secondo il motto <q>"Fai della tua passione un lavoro e non lavorerai nemmeno per 1 giorno"</q>.
             Collaboro con aziende pubbliche e private su <strong>progetti in fase di startup</strong>, sia come sviluppatore che come <em>consulente SEO</em> per partire con il piede giusto.
           </p>
         </div>
       </section>
-
+      <br />
       <hr />
+      <br />
       <section>
         <div>
           <h2>FORMAZIONE</h2>
+          <br>
           <h3>Diploma scientifico</h3>
+          <br>
           <p>Conseguito nel 2010 con <mark>votazione 100/100</mark> presso l'istituto Righi.</p>
+          <br>
           <h3>Master Web Developer</h3>
+          <br>
           <p>
             Conseguito nel 2016 presso <a href="https://www.epicode.school" target="_blank" title="Il sito della scuola dove mi sono certificato">Epicode School</a>.<br />
             Riconosciuto in via ufficiale per crediti formativi. Il certificato è stato rinnovato nel 2019 tramite nuovo esame.
           </p>
         </div>
       </section>
-
+      <br />
+      <br />
+      <hr>
       <section>
         <h2>COMPETENZE</h2>
-
+        <br>
         <div>
           <h3>Conoscenze tecniche</h3>
           <p>Le conoscenze nel mio bagaglio tecnico sono le seguenti:</p>
@@ -84,7 +105,8 @@
             <li>Technical SEO</li>
           </ul>
         </div>
-
+        <br>
+        
         <div>
           <h3>Conoscenze operative</h3>
           <dl>
@@ -98,18 +120,23 @@
         </div>
       </section>
     </main>
-
+    <br />
     <hr />
+    <br />
 
     <footer>
-      <p>
-        Per stampare questa pagina premere i tasti <kbd>Ctrl + P</kbd><br />oppure<br /><a href="assets/doc/curriculum.pdf" target="_blank" title="Il mio Curriculum in formato PDF - 20Kb"
+      <p class="paragrafo-footer">
+        Per stampare questa pagina premere i tasti <kbd>Ctrl + P</kbd><br />oppure<br /><a
+          "
+          href="assets/doc/curriculum.pdf"
+          target="_blank"
+          title="Il mio Curriculum in formato PDF - 20Kb"
           >Scarica il mio C.V.</a
         >
       </p>
       <p><small>Autorizzo il trattamento dei dati personali secondo il decreto vigente</small></p>
       <hr />
-      <p>Copyright &copy;2021 - Tutti i diritti riservati</p>
+      <p class="paragrafo3-footer">Copyright &copy;2021 - Tutti i diritti riservati</p>
     </footer>
   </body>
 </html>
